spec: Clarify the expected behaviour for incorrect Seed Report signatures
Signed-off-by: Michael Brown <mbrown@fensystems.co.uk>

--- a/spec/cx.lyx
+++ b/spec/cx.lyx
@@ -4047,6 +4047,9 @@ noprefix "false"
 \end_inset
 
 ).
+ A Publisher SHALL reject a Seed Report that fails signature verification
+ and, where possible, SHALL return an error to the Advertiser indicating
+ that the signature was incorrect.
 \end_layout
 
 \begin_layout Standard
