spec: Use SEQUENCE OF rather than SET OF for encoding preseed values
The preseed values are logically an unordered set rather than a
sequence, but an arbitrary order must be imposed to allow a repeatable
signature to be generated over the DER representation.

Fix by defining the PreseedValues type as a SEQUENCE rather than a
SET, and clarify in the specification wording that the ordering is
arbitrary.

Signed-off-by: Michael Brown <mbrown@fensystems.co.uk>

--- a/spec/cx.lyx
+++ b/spec/cx.lyx
@@ -3546,8 +3546,9 @@ The
 \series bold
 preseedValues
 \series default
- field contains an unordered set of Preseed Values, each encoded as an OCTET
- STRING of the Seed Length specified for the Generator Type in section
+ field contains an arbitrarily ordered sequence of Preseed Values, each
+ encoded as an OCTET STRING of the Seed Length specified for the Generator
+ Type in section
 \begin_inset space ~
 \end_inset
 
