--- a/spec/cx.bib
+++ b/spec/cx.bib
@@ -58,14 +58,15 @@
   url = {https://tools.ietf.org/html/rfc5280},
   note = {\url{https://tools.ietf.org/html/rfc5280}},
 }
-@misc{X.690,
+@techreport{X.690,
   author = {{International Telecommunication Union}},
   title = {Information Technology --- {ASN.1} Encoding Rules --- Specification of Basic Encoding Rules {(BER)}, Canonical Encoding Rules {(CER)}, and Distinguished Encoding Rules {(DER)}},
   howpublished = {ITU-T Recommendation X.690},
-  year = {2002},
-  month = {July},
-  url = {https://www.itu.int/rec/T-REC-X.690/},
-  note = {\url{https://www.itu.int/rec/T-REC-X.690/}},
+  institution = {ITU},
+  year = {2015},
+  month = {August},
+  url = {https://www.itu.int/rec/T-REC-X.690-201508-I/en},
+  note = {\url{https://www.itu.int/rec/T-REC-X.690-201508-I/en}},
 }
 @misc{OpenSSL,
   title = {{OpenSSL} library},
