spec: Silence BibTeX warning about missing key for OpenSSL
Signed-off-by: Michael Brown <mbrown@fensystems.co.uk>

--- a/spec/cx.bib
+++ b/spec/cx.bib
@@ -70,6 +70,7 @@
 }
 @misc{OpenSSL,
   title = {{OpenSSL} library},
+  key = {OpenSSL},
   url = {https://www.openssl.org/},
   note = {\url{https://www.openssl.org/}},
 }
