spec: Cite ITU-T X.680 for ASN.1 schema
ITU-T X.690 defines ASN.1 DER, but the base specification for ASN.1
schema is ITU-T X.680.  Add a BibTeX entry for X.680 and correct
citations where needed.

Signed-off-by: Michael Brown <mbrown@fensystems.co.uk>

--- a/spec/cx.bib
+++ b/spec/cx.bib
@@ -58,6 +58,16 @@
   url = {https://tools.ietf.org/html/rfc5280},
   note = {\url{https://tools.ietf.org/html/rfc5280}},
 }
+@techreport{X.680,
+  author = {{International Telecommunication Union}},
+  title = {Information Technology --- {Abstract} {Syntax} {Notation} {One} {(ASN.1)}: Specification of basic notation},
+  howpublished = {ITU-T Recommendation X.680},
+  institution = {ITU},
+  year = {2015},
+  month = {August},
+  url = {https://www.itu.int/rec/T-REC-X.680-201508-I/en},
+  note = {\url{https://www.itu.int/rec/T-REC-X.680-201508-I/en}},
+}
 @techreport{X.690,
   author = {{International Telecommunication Union}},
   title = {Information Technology --- {ASN.1} Encoding Rules --- Specification of Basic Encoding Rules {(BER)}, Canonical Encoding Rules {(CER)}, and Distinguished Encoding Rules {(DER)}},
